# my-spacy-tokenizer-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  pattern.rs  punctuation.rs  symbols.rs  tokenizer_exceptions.rs
